@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
 
+  21 Dec 2005; Roy Marples <uberlord@gentoo.org>:
+
+    Add new variable RC_DOWN_INTERFACE and documentation so that interfaces
+    are kept up for Wake On LAN support, #113880.
+
   21 Dec 2005; Mike Frysinger <vapier@gentoo.org>:
 
     Make sure /etc/profile.d exists before using it #116232 by Saleem A.
